--- a/ComparingSequences.qmd
+++ b/ComparingSequences.qmd
@@ -814,7 +814,7 @@ geom_density(aes(color = method), alpha = 0.5)+
   facet_grid(~timescale)
 
 #separate function to output the path?
-chain_solution <- function(combos, shed, methods = c("random", "cheapest_insertion")){
+chain_solution <- function(combos, shed, methods = "cheapest_insertion", plot = FALSE){
 #combos <- ZZ_IDs
 zzz <- length(combos)
 rep(combos, zzz)
@@ -884,12 +884,10 @@ atsp <- as.ATSP(edgesIn)
     if(i == 1) ZZ_chain_outputs <- output
     if(i > 1) ZZ_chain_outputs <- rbind(ZZ_chain_outputs, output)
 }
-return(ZZ_chain_outputs)
-}
 
-chains <- chain_solution(ZZ_IDs, "ZZ")
 
-chains_test <- chains %>% filter(method == "cheapest_insertion")
+
+chains_test <- ZZ_chain_outputs
 edges <- cbind(chains_test$node_ID[-length(chains_test$node_ID)], chains_test$node_ID[-1])
 
 chain_graph <- graph_from_edgelist(edges, directed = TRUE)
@@ -897,18 +895,31 @@ chain_graph <- graph_from_edgelist(edges, directed = TRUE)
 V(chain_graph)$labels <- chains_test$sensor_ID
 
 ggmst <- fortify(chain_graph, layout = igraph::layout_as_tree(chain_graph))
-ggplot(ggmst, aes(x = x, y = y, xend = xend, yend = yend)) +
-  geom_edges(color = "grey", arrow = grid::arrow(length = unit(6, "pt"),
-                                                 type = "open")) +
-  geom_nodes(color = "black", size = 3) +
-  geom_nodetext(aes(label = labels),
-                fontface = "bold", color = "white", size = 1) +
-  theme_blank()
+
+# if(plot == TRUE){
+# ggplot(ggmst, aes(x = x, y = y, xend = xend, yend = yend)) +
+#   geom_edges(color = "grey", arrow = grid::arrow(length = unit(6, "pt"),
+#                                                  type = "open")) +
+#   geom_nodes(color = "black", size = 3) +
+#   geom_nodetext(aes(label = labels),
+#                 fontface = "bold", color = "white", size = 1) +
+#   theme_blank()
+# }
 
 order <- ggmst %>% 
   arrange(desc(y))
 
-unique(order$labels)
+#unique(order$labels)
+
+#perfecting chains function to just output a dataframe, with one column for the sequence number, and the other for sensor ID
+chains_output <- data.frame("ID" = unique(order$labels),
+           "sequence" = seq(1, length(unique(order$labels)), 1))
+
+return(chains_output)
+
+}
+chain_solution(ZZ_IDs, "ZZ", plot = TRUE)
+
 ```
 
 #graph theory
@@ -1421,14 +1432,174 @@ final <- left_join(sequential, total, by = "datetime") %>%
 
 
 #create a reference dataframe with the sensor ID, then the number in the sequence
+w3_twi_sequence <- w3_twi %>% 
+    filter(ID %in% W3_IDs) %>% 
+  arrange(desc(twi)) %>% 
+  rename(sequence = twi)
+
+fb_twi_sequence <- fb_twi %>% 
+    filter(ID %in% FB_IDs) %>% 
+  arrange(desc(twi))
+
+zz_twi_sequence <- zz_twi %>% 
+    filter(ID %in% ZZ_IDs) %>% 
+  arrange(desc(twi))
+
 ```
-```{r plot-along-discharge}
+```{r}
+#creating chains
+
+W3_cheap <- chain_solution(W3_IDs, "W3", methods = "cheapest_insertion")
+W3_random <- chain_solution(W3_IDs, "W3", methods = "random")
+
+FB_cheap <- chain_solution(FB_IDs, "FB", methods = "cheapest_insertion")
+FB_random <- chain_solution(FB_IDs, "FB", methods = "random")
+
+ZZ_cheap <- chain_solution(ZZ_IDs, "ZZ", methods = "cheapest_insertion")
+ZZ_random <- chain_solution(ZZ_IDs, "ZZ", methods = "random")
+
+```
+Once sequence is defined, I can compare to the actual flow data
+```{r}
+#sequential <- 
+input_w3 %>% 
+  left_join(W3_cheap, by = "ID") %>%
+  group_by(datetime) %>% 
+  select(-c(wshed, mins)) %>% 
+  arrange((sequence)) %>% 
+  mutate("downstream" = lag(binary),
+         "following" = downstream - binary) %>% 
+  #filter(following != -1) %>% 
+  filter(datetime == "2023-07-15 19:00:00") %>% View()
+   # summarise(count_non = length(following)) %>% View()
+    
+input_w3 %>% 
+  left_join(W3_pk_seq, by = "ID") %>%
+  group_by(datetime) %>% 
+  select(-c(wshed, mins)) %>% 
+  arrange((sequence)) %>% 
+  mutate("downstream" = lag(binary),
+         "following" = downstream - binary) %>% 
+  #filter(following != -1) %>% 
+  filter(datetime == "2023-07-15 19:00:00") %>% View()
+    summarise(count_non = length(following))
+
+#make a df with ID and the number in the sequence
+W3_pk_seq <- pks_w3 %>% 
+  arrange(desc(pk)) %>% 
+  mutate(sequence = seq(1, length(pks_w3$ID), 1)) %>% 
+  select(ID, sequence)
+  
+
+total <- input_w3 %>% 
+  left_join(W3_cheap, by = "ID") %>%
+  group_by(datetime) %>% 
+  select(-c(wshed, mins, datetime)) %>% 
+  arrange(sequence) %>% 
+  mutate("downstream" = lag(binary),
+         "following" = downstream - binary) %>% 
+    summarise(count_all = length(following))
+
+final <- left_join(sequential, total, by = "datetime") %>% 
+  mutate(prop = count_non/count_all)
+
+#write a function to calculate this in 1 quick step
+calc_time <- function(sequence_df, shed, seq_label){
+  
+  if(shed == "W3"){
+    input_f <- input_w3
+  } else if(shed == "FB"){
+        input_f <- input_fb
+  } else if(shed == "ZZ"){
+        input_f <- input_zz
+  }
+  
+sequential <- input_f %>% 
+  left_join(sequence_df, by = "ID") %>%
+  group_by(datetime) %>% 
+  select(-c(wshed, mins, datetime)) %>% 
+  arrange(sequence) %>% 
+  mutate("downstream" = lag(binary),
+         "following" = downstream - binary) %>% 
+  filter(following != -1) %>% 
+    summarise(count_non = length(following))
+
+total <- input_f %>% 
+  left_join(sequence_df, by = "ID") %>%
+  group_by(datetime) %>% 
+  select(-c(wshed, mins, datetime)) %>% 
+  arrange(sequence) %>% 
+  mutate("downstream" = lag(binary),
+         "following" = downstream - binary) %>% 
+    summarise(count_all = length(following))
+
+final <- left_join(sequential, total, by = "datetime") %>% 
+  mutate(prop = count_non/count_all) %>% 
+  mutate(shed = shed)
+
+output <- q_24_bind %>% 
+  inner_join(final, by = "datetime") %>% 
+  mutate(seq_label = seq_label)
+
+return(output)
+}
+
+calc_time(W3_cheap, "W3", "cheapest")
+```
+
+```{r prepare-discharge}
+#from TestingFrameworks script
+
+#read in discharge from W3-- input to Carrie's model, discharge in L/s
+#q <- read_csv("https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-hbr.1.17&entityid=efc477b3ef1bb3dd8b9355c9115cd849")
+#write.csv(q, "HB_5minQ.csv")
+q <- read_csv("HB_5minQ.csv")
+
+#input discharge needs to be in mm/day?
+#reference to understand difference between daily mean and instantaneous streamflow:
+#https://hydrofunctions.readthedocs.io/en/master/notebooks/DailyMean_vs_Instant.html
+
+#creating minute column, used to filter out higher temporal resolution measurements for plotting
+data_23$mins <- minute(data_23$datetime)
+data_24$mins <- minute(data_24$datetime)
+
+#find the range of dates that I need discharge for
+start <- min(data_23$datetime)
+stop <- max(data_23$datetime)
+
+#filtering discharge down to the range of dates
+q_23 <- q %>% 
+  filter(DATETIME > start & DATETIME < stop) %>% 
+  #convert to mm/day.
+  #converting instantaneous streamflow to mm/day by taking measurement, and scaling   it up as if that was the discharge for the whole day. It is not, it is just at that   moment, but should fix any units/order of magnitude issues
+  mutate("Q_mm_day" = Discharge_ls * 0.001 * 86400 / 420000 * 1000) 
+q_23$mins <- minute(q_23$DATETIME)
+
+#removing times that are not coincident with STIC observations
+q_23_f <- filter(q_23, mins %in% c(0, 30))
+
 ggplot(q_23_f, aes(x  = DATETIME, y = Q_mm_day))+
   geom_line()+
   labs(title = "Discharge from W3, July to Nov 2023",
        x = "",
        y = "Instantaneous Q (mm/day)")+
   theme_classic()
+
+#also read in provisional 2024 data
+q_24 <- read_csv("w3_discharge_24.csv")
+
+#find the range of dates that I need discharge for
+start24 <- ymd_hms("2024-05-15 00:00:00 UTC")
+stop24 <- max(data_24$datetime)
+
+#filtering discharge down to the range of dates
+q_24 <- q_24 %>% 
+  mutate(datetime = mdy_hm(datetime)) %>% 
+  filter(datetime > start24 & datetime < stop24)  
+q_24$mins <- minute(q_24$datetime)
+
+#removing times that are not coincident with STIC observations
+q_24_f <- filter(q_24, mins %in% c(0, 30))
 
 ggplot(q_24_f, aes(x  = datetime, y = Q_mmperday))+
   geom_line()+
@@ -1437,6 +1608,7 @@ ggplot(q_24_f, aes(x  = datetime, y = Q_mmperday))+
        y = "Instantaneous Q (mm/day)")+
   theme_classic()
 
+#get discharge ready to bind to my other data
 q_23_bind <- 
   q_23_f %>% 
   select(DATETIME, Q_mm_day) %>% 
@@ -1447,9 +1619,16 @@ q_24_bind <-
   q_24_f %>% 
   select(datetime, Q_mmperday) %>% 
   rename("Q_mm_day" = Q_mmperday)
+```
 
-q_24_bind %>% 
-  inner_join(final, by = "datetime") %>% 
+```{r plot-along-discharge}
+
+rbind(
+calc_time(W3_cheap, "W3", "cheapest"),
+calc_time(W3_random, "W3", "random"),
+calc_time(w3_twi_sequence, "W3", "twi"),
+calc_time(W3_pk_seq, "W3", "pk")
+) %>% 
   ggplot(aes(x  = datetime, y = Q_mm_day))+
   geom_line(aes(color = prop))+
   labs(title = "Discharge from W3, 2024",
@@ -1457,6 +1636,508 @@ q_24_bind %>%
        y = "Instantaneous Q (mm/day)")+
   theme_classic()+
   scale_color_continuous(type = "viridis")+
-                       theme(rect = element_rect(fill = "transparent", color = NA))
+                       theme(rect = element_rect(fill = "transparent", color = NA))+
+  facet_grid(seq_label~shed)
+```
+
+```{r}
+pk_props_join <- calc_time(W3_pk_seq, "W3", "pk") %>% 
+  select(datetime, prop) %>% 
+  rename("pk_prop" = prop)
+
+rbind(
+calc_time(W3_cheap, "W3", "cheapest"),
+calc_time(W3_random, "W3", "random"),
+calc_time(w3_twi_sequence, "W3", "twi"),
+calc_time(W3_pk_seq, "W3", "pk")
+) %>% 
+  left_join(pk_props_join, by = "datetime") %>% 
+  filter(seq_label != "pk") %>% 
+  mutate(diff = prop - pk_prop) %>% 
+  ggplot(aes(x  = datetime, y = Q_mm_day))+
+  geom_line(aes(color = diff))+
+  labs(title = "Difference between Flow permanence sequence and others, 2023",
+       x = "",
+       y = "Instantaneous Q (mm/day)")+
+  theme_classic()+
+  scale_color_gradient2(low = "red", 
+    mid = "white", 
+    high = "blue", 
+    midpoint = 0,
+    limits = c(-0.3, 0.3))+
+                       theme(rect = element_rect(fill = "transparent", color = NA))+
+  facet_grid(seq_label~shed)
+```
+
+This method of evaluating did not quite produce what i was hoping, I am going to try one more then i might have to change my results and discussion...
+
+Use same method as Botter and Durighetto paper, model! Calculate the number of nodes that are active at each time step, and turn nodes following sequence until the same number of flowing nodes are on
+```{r}
+input_w3 %>% 
+  left_join(W3_cheap, by = "ID") %>%
+  group_by(datetime) %>% 
+  select(-c(wshed, mins)) %>% 
+  arrange((sequence)) %>% 
+  # mutate("downstream" = lag(binary),
+  #        "following" = downstream - binary) %>% 
+  #filter(following != -1) %>% 
+  filter(datetime == "2023-07-15 19:00:00") %>% View()
+   # summarise(count_non = length(following)) %>% View()
+
+# calculate the number of flowing nodes at each timestep
+number_activated <- 
+  input_w3 %>% 
+  left_join(W3_cheap, by = "ID") %>%
+  group_by(datetime) %>% 
+  select(-c(wshed, mins)) %>% 
+  #arrange(sequence) %>% 
+      filter(binary == 1) %>% 
+    summarise(number_flowing = length(binary))
+
+
+  
+#make a dataframe where each row is a date, with a list of the active or inactive nodes according to a hierarchy
+number_activated %>% mutate(all_nodes = W3_pk_seq$ID)
+
+
+```
+
+```{r}
+# 1. Ordered node sequence
+node_sequence <- W3_pk_seq$ID
+
+# 2. Dataframe with timestamps and how many nodes to activate
+number_activated
+
+# 3. Build the activation matrix
+activation_matrix <- t(sapply(number_activated$number_flowing, function(n) {
+  active_flags <- rep(0, length(node_sequence))
+  if (n > 0) active_flags[1:n] <- 1
+  active_flags
+}))
+
+# 4. Assign column names and combine with timestamps
+colnames(activation_matrix) <- node_sequence
+activation_df <- cbind(number_activated["datetime"], as.data.frame(activation_matrix))
+
+# View result
+activation_final <- activation_df %>% pivot_longer(-datetime) %>% 
+  rename("ID" = name, "pred_binary" = value) %>% 
+  mutate(ID = as.numeric(ID))
+
+
+#now compare the result to the actual
+code <- data.frame(diff = c(-1, 0, 1),
+                   code = c("commission", "correct", "ommission"))
+
+comparison <- input_w3 %>% 
+  filter(mins %in% c(0, 30)) %>% left_join(activation_final, by = c("datetime", "ID")) %>% 
+  mutate("diff" = binary - pred_binary) %>%
+  left_join(code, by = "diff") %>% 
+  #filter(diff != 0) %>%
+  #filter(datetime == "2023-07-11 19:00:00") %>% 
+  group_by(code, datetime) %>% 
+   summarise(count = length(code))
+
+comparison %>% 
+  filter(datetime >= ymd_hms("2023-07-24 00:00:00") & datetime <= ymd_hms("2023-08-20 00:00:00")) %>% 
+  ggplot() +
+  geom_histogram(aes(x = datetime, y = count, fill = code), stat = "identity")
+```
+
+Function to calculate the comparison between botter model based on a provided sequence.
+```{r}
+
+calc_model_result <- function(input_sequence, output_col){
+# 1. Ordered node sequence
+node_sequence <- input_sequence
+
+# 2. Dataframe with timestamps and how many nodes to activate
+number_activated
+
+# 3. Build the activation matrix
+activation_matrix <- t(sapply(number_activated$number_flowing, function(n) {
+  active_flags <- rep(0, length(node_sequence))
+  if (n > 0) active_flags[1:n] <- 1
+  active_flags
+}))
+
+# 4. Assign column names and combine with timestamps
+colnames(activation_matrix) <- node_sequence
+activation_df <- cbind(number_activated["datetime"], as.data.frame(activation_matrix))
+
+# View result
+activation_final <- activation_df %>% pivot_longer(-datetime) %>% 
+  rename("ID" = name, "pred_binary" = value) %>% 
+  mutate(ID = as.numeric(ID))
+
+
+#now compare the result to the actual
+# code <- data.frame(diff = c(-1, 0, 1),
+#                    code = c("commission", "correct", "ommission"))
+# 
+# comparison <- input_w3 %>% 
+#   filter(mins %in% c(0, 30)) %>% left_join(activation_final, by = c("datetime", "ID")) #%>% 
+#   # mutate("diff" = binary - pred_binary) %>%
+#   # left_join(code, by = "diff") %>% 
+#   # #filter(diff != 0) %>%
+#   # #filter(datetime == "2023-07-11 19:00:00") %>% 
+#   # group_by(code, datetime) %>% 
+#   #  summarise(count = length(code))
+
+return(activation_final)
+}
+
+cheap_model <- calc_model_result(W3_cheap$ID) %>% rename("cheapest" = pred_binary)
+pk_model <- calc_model_result(W3_pk_seq$ID) %>% rename("pk" = pred_binary)
+random_model <- calc_model_result(W3_random$ID) %>% rename("random" = pred_binary)
+twi_model <- calc_model_result(w3_twi_sequence$ID) %>% rename("twi" = pred_binary)
+
+
+comparison <- input_w3 %>% 
+  filter(mins %in% c(0, 30)) %>% 
+  left_join(cheap_model, by = c("datetime", "ID")) %>% 
+  left_join(pk_model, by = c("datetime", "ID")) %>% 
+    left_join(random_model, by = c("datetime", "ID")) %>% 
+  left_join(twi_model, by = c("datetime", "ID")) %>% 
+  select(-wshed, -mins) %>% 
+  drop_na()
+
+#chat gpt method to compare them
+get_eval_label <- function(true, pred) {
+  if (true == 1 && pred == 1) return("correct")
+  if (true == 0 && pred == 0) return("correct")
+  if (true == 1 && pred == 0) return("omission")
+  if (true == 0 && pred == 1) return("commission")
+}
+get_eval_label(0,0)
+#apply get_eval function to each model run
+comparison$cheapest_eval <- mapply(get_eval_label, comparison$binary, comparison$cheapest)
+comparison$pk_eval <- mapply(get_eval_label, comparison$binary, comparison$pk)
+comparison$random_eval <- mapply(get_eval_label, comparison$binary, comparison$random)
+comparison$twi_eval <- mapply(get_eval_label, comparison$binary, comparison$twi)
+
+
+comparison$comparison <- with(comparison, ifelse(
+  cheapest_eval == pk_eval, "equal",
+  ifelse(cheapest_eval == "correct", "cheap_better",
+         ifelse(pk_eval == "correct", "pk_better", "neither_better"))
+))
+
+library(dplyr)
+
+summary_by_node <- comparison %>%
+  group_by(ID) %>%
+  summarize(
+    cheap_correct = sum(cheapest_eval == "correct"),
+    pk_correct = sum(pk_eval == "correct"),
+    random_correct = sum(random_eval == "correct"),
+    twi_correct = sum(twi_eval == "correct"),
+    cheap_omission = sum(cheapest_eval == "omission"),
+    pk_omission = sum(pk_eval == "omission"),
+    random_omission = sum(random_eval == "omission"),
+    twi_omission = sum(twi_eval == "omission"),
+    cheap_commission = sum(cheapest_eval == "commission"),
+    pk_commission = sum(pk_eval == "commission"),
+    random_commission = sum(random_eval == "commission"),
+    twi_commission = sum(twi_eval == "commission")
+    #A_better_count = sum(comparison == "A_better"),
+    #B_better_count = sum(comparison == "B_better"),
+    #Equal_count = sum(comparison == "equal")
+  )
+
+
+ggplot(summary_by_node, aes(x=A_correct, y=B_correct, label=ID)) +
+  geom_point() +
+  geom_abline(slope=1, intercept=0, linetype="dashed", color="red") +
+  geom_text(nudge_y=1.5) +
+  labs(title="Model Comparison per Node", x="Model A Correct Predictions", y="Model B Correct Predictions")
+
+ggplot(summary_by_node, aes(x=A_better_count, y=B_better_count)) +
+  geom_point() +
+  geom_abline(slope=1, intercept=0, linetype="dashed") +
+  labs(x="Times Model A was better", y="Times Model B was better")
+
+#summarize through time
+df_summary_time <- comparison %>%
+  group_by(datetime) %>%
+  summarize(
+    cheap_correct = sum(cheapest_eval == "correct"),
+    pk_correct = sum(pk_eval == "correct"),
+    random_correct = sum(random_eval == "correct"),
+    twi_correct = sum(twi_eval == "correct"),
+    total = n(),
+    cheap_accuracy = cheap_correct / total,
+    pk_accuracy = pk_correct / total,
+    random_accuracy = random_correct / total,
+    twi_accuracy = twi_correct / total
+  )
+
+df_summary_time <- df_summary_time %>%
+  mutate(diff = A_accuracy - B_accuracy)
+
+df_long <- df_summary_time %>%
+  select(datetime, cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy) %>%
+  tidyr::pivot_longer(cols = c(cheap_accuracy, pk_accuracy, random_accuracy, twi_accuracy), 
+                      names_to = "model", values_to = "accuracy")
+
+ggplot(df_long, aes(x = datetime, y = accuracy, color = model)) +
+  geom_line() +
+  labs(title = "Model Accuracy Over Time", y = "Accuracy", x = "Time")
+
+ggplot(df_summary_time, aes(x = datetime, y = diff)) +
+  geom_line() +
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  labs(title = "Difference in Accuracy (A - B)", y = "Accuracy Difference", x = "Time")
+
+#plot the difference in performance versus discharge
+df_summary_time %>% 
+  inner_join(discharge_df, by = "datetime") %>% 
+  #rename("Hydrograph Component", event_type)
+  #group_by(event_type, code) %>% 
+  #summarise(mean = mean(count)) %>% 
+  ggplot(aes(x = Q_mm_day, y = diff, color = event_type)) +
+  geom_point(alpha = 0.5) +
+    geom_hline(yintercept = 0, linetype = "dashed") +
+  labs(title = "Difference in Accuracy (Cheapest - Prop of time flowing)", y = " ", x = "Discharge (mm/day)")+
+   scale_color_manual(values = c("#397367", "#FFA400", "#93C2F1"))+
+  labs(color='Hydrograph Component') +
+  theme_classic()
+
+four_colors <- c("#bb4430", "#7ebdc2", "#231f20", "#f3dfa2")
+
+#plot of the accuracy versus discharge, colored by scheme, shape by hydrograph component
+df_long %>% 
+  inner_join(discharge_df, by = "datetime") %>% 
+  #rename("Hydrograph Component", event_type)
+  #group_by(event_type, code) %>% 
+  #summarise(mean = mean(count)) %>% 
+  ggplot(aes(x = Q_mm_day, y = accuracy, color = model, shape = event_type)) +
+  geom_point(alpha = 0.3, size = 2) +
+    #geom_hline(yintercept = 0, linetype = "dashed") +
+  labs(title = "Accuracy (correctly modeled states/total)", y = " ", x = "Discharge (mm/day)")+
+   scale_color_manual(values = four_colors)+
+  labs(color='Hydrograph Component') +
+  theme_classic()+
+  facet_wrap(~model)
+
+#make companion plot that shows the number of transitions during each part of hydrograph
+test <- input_w3 %>% 
+  filter(mins %in% c(0, 30)) %>%
+  group_by(ID) %>% 
+  mutate(lagged = lag(binary),
+         transition = (binary - lagged)) %>% 
+  filter(transition %in% c(-1, 1))
+
+test$state_change <- "none"
+test$state_change[test$transition == -1] <- "wetting"
+test$state_change[test$transition == 1] <- "drying"
+
+library(knitr)
+test %>% 
+  inner_join(discharge_df, by = "datetime") %>%
+  group_by(state_change, event_type) %>% 
+  summarise(count = n()) %>% 
+  pivot_wider(names_from = state_change, values_from = count) %>% 
+  kable(format = "markdown")
+
+
+
+
+Chunk straight from mapsForStoryboard, of my current best attempt to extract rising and falling limbs from discharge record for W3. Plan to use to compare how the different methods work during rising, falling, and baseflow.
+```{r identifying-events}
+start <- ymd_hms("2023-7-20 00:00:00")
+stop <- ymd_hms("2023-10-22 00:00:00")
+
+
+q_23_plotting <- q_23_f %>% 
+    filter(DATETIME > start & DATETIME < stop) %>% 
+  rename("datetime" = DATETIME)
+q_23_plotting %>% 
+ggplot(aes(x  = datetime, y = Q_mm_day))+
+  geom_line()+
+  labs(title = "Discharge from W3, July to Nov 2023",
+       x = "",
+       y = "Instantaneous Q (mm/day)")+
+  theme_classic()
+
+#calculate baseflow
+bf = baseflowB(q_23_plotting$Q_mm_day, alpha = 0.980)
+#subtract baseflow from discharge
+PoT_res = eventPOT(q_23_plotting$Q_mm_day - bf$bf, threshold = 1, min.diff = 1)
+#plot the events
+plotEvents(data = q_23_plotting$Q_mm_day, events = PoT_res, xlab = "Index", ylab = "Flow (ML/day)", colpnt = "#E41A1C", colline = "#377EB8", main = "eventPOT")
+
+
+
+limbs(data = q_23_plotting$Q_mm_day, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = TRUE)#now, extract just the start column, then get each window and run through scoring algorithm
+PoT_res$srt
+
+q_23_plotting %>% 
+  select(datetime, Q_mm_day) %>% 
+  arrange(datetime) %>% 
+  unique() %>% 
+  mutate(lab = as.numeric(row_number())) %>% 
+  mutate(group = data.table::rleid(lab, cols = PoT_res$srt))
+
+ranges <- data.frame("starts" = PoT_res$srt) %>% 
+  mutate("stops" = lead(starts)) %>% 
+  mutate(event_ID = row_number(starts))
+
+ranges[26,2] <- 5762
+#trying fuzzy join method?
+p_load(fuzzyjoin)
+id_events <- q_23_plotting %>% 
+  select(datetime, Q_mm_day) %>% 
+  mutate(ID = row_number()) |> fuzzy_left_join(ranges, by = c(ID = "starts", ID = "stops"),
+                              match_fun = list(`>=`, `<=`)) |> 
+   mutate(event_ID = event_ID) |> 
+   select(-starts, -stops)
+
+id_events %>% 
+  ggplot()+
+  geom_line(aes(x = datetime, y = Q_mm_day, color = event_ID))
+
+
+```
+
+
+
+```{r id-join-limbs}
+library(dplyr)
+library(purrr)
+
+
+# Example: discharge dataframe with datetime and discharge
+discharge_df <- q_23_plotting %>% 
+  select(datetime, Q_mm_day)
+
+# Copy of your event table
+events <- limbs(data = q_23_plotting$Q_mm_day, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = FALSE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+# Initialize the event_type column
+discharge_df$event_type <- NA_character_
+discharge_df$event_id <- NA_integer_
+
+# Assign "rising" and "falling" from event definitions
+for (i in seq_len(nrow(events))) {
+  ev <- events[i, ]
+  discharge_df$event_id[ev$ris.srt:ev$fal.end] <- i  # Event ID for rising+falling
+  
+  # Rising limb
+  if (!is.na(ev$ris.srt) && !is.na(ev$ris.end) && ev$ris.srt <= ev$ris.end) {
+    discharge_df$event_type[ev$ris.srt:ev$ris.end] <- "rising"
+  }
+  
+  # Falling limb
+  if (!is.na(ev$fal.srt) && !is.na(ev$fal.end) && ev$fal.srt <= ev$fal.end) {
+    discharge_df$event_type[ev$fal.srt:ev$fal.end] <- "falling"
+  }
+  
+  # Baseflow between events
+  if (i < nrow(events)) {
+    this_fal_end <- ev$fal.end
+    next_ris_srt <- events$ris.srt[i + 1]
+    if (this_fal_end + 1 <= next_ris_srt - 1) {
+      baseflow_idx <- (this_fal_end + 1):(next_ris_srt - 1)
+      discharge_df$event_type[baseflow_idx] <- "baseflow"
+      discharge_df$event_id[baseflow_idx] <- NA  # baseflow is not part of any event
+    }
+  }
+}
+
+# Optional: label all remaining NA values as "baseflow" (e.g., before first or after last event)
+discharge_df$event_type[is.na(discharge_df$event_type)] <- "baseflow"
+
+discharge_df %>% 
+  ggplot(aes(x = datetime, y = Q_mm_day, color = event_type))+
+  geom_point()
+
+```
+
+Combine the model results above, and the identified events
+```{r}
+comparison %>% 
+  drop_na() %>% 
+  inner_join(discharge_df, by = "datetime") %>% 
+  group_by(event_type, code) %>% 
+  summarise(mean = mean(count)) %>% 
+  ggplot()+
+  geom_bar(aes(x = event_type, y = mean, fill = code), stat = "identity")
+
+comparison %>% 
+  inner_join(discharge_df, by = "datetime") %>% 
+  filter(code == "ommission") %>% 
+  ggplot()+
+  geom_line(aes(x = datetime, y = Q_mm_day, color = count))
+
+#for the graph theory solution, the commission and ommission are symmetrical most of the time... I guess this makes sense if one is out of order, it causes another to be in order, like when I did the lagging method to calculate this
+comparison %>% 
+  inner_join(discharge_df, by = "datetime") %>% 
+  pivot_wider(names_from = code, values_from = count) %>% 
+  mutate(diff = commission - ommission) %>% 
+  filter(diff != 0) %>% View()
+
+
+```
+
+
+#Stage for FB and ZZ
+```{r}
+FB_air <- read_csv("./PressureTransducers_11_14_23/FB_air.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_air = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME))
+
+FB_water <- read_csv("./PressureTransducers_11_14_23/FB_water.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_water = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME))
+
+FB_water %>% 
+  left_join(FB_air, by = "DATETIME") %>% 
+  mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
+  mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701) %>% 
+  ggplot(aes(x = DATETIME, y = stage_cm))+
+  geom_line()+
+  theme_classic()+
+  labs(title = "Falls Brook Stage",
+       x = "",
+       y = "Stage (in)")
+```
+
+```{r}
+#chunk that reads in stage, converts to proper units
+#read in stage, convert to a height
+ZZ_air <- read_csv("./PressureTransducers_11_14_23/ZZ_air.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_air = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME))
+
+ZZ_water <- read_csv("./PressureTransducers_11_14_23/ZZ_water.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_water = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME))
+
+ZZ_water %>% 
+  left_join(ZZ_air, by = "DATETIME") %>% 
+  mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
+  mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701) %>% 
+  ggplot(aes(x = DATETIME, y = stage_cm))+
+  geom_line()+
+  theme_classic()+
+  labs(title = "Falls Brook Stage",
+       x = "",
+       y = "Stage (in)")
 ```
 
